<resources>
    <string name="app_name">PawPal</string>
    <string name="log">Логін</string>
    <string name="password">Пароль</string>
    <string name="create_new_acc">Немає акаунта?</string>
    <string name="go">Увійти</string>
    <string name="password_repeat">Підтвердити пароль</string>
    <string name="email">Email</string>
    <string name="send">Відправляємо…</string>
    <string name="create">Створити</string>
    <string name="meet">Давай знайомитись</string>
    <string name="name_animal">Як звати улюбленця?</string>
    <string name="age_animal">Скільки років (1–100)?</string>
    <string name="add">Додати</string>
    <string name="exit">Вийти</string>
    <string name="head_page">Head Fragment</string>
    <string name="medical_page">Medical Fragment</string>
    <string name="contacts_page">Contacts Fragment</string>
    <string name="profile_page">Profile Fragment</string>
    <string name="main">Головна</string>
    <string name="medical">Медзаписи</string>
    <string name="contacts">Контакти</string>
    <string name="profile">Профіль</string>
    <string name="food">Їжа</string>
    <string name="toys">Іграшки</string>
    <string name="interesting">Цікавості</string>
    <string name="grn_pattern">%1s грн</string>
    <string name="see_all">Переглянути всі</string>
    <string name="percents">%1d %%</string>
    <string name="reminder">Нагадування</string>
    <string name="history">Історія</string>
    <string name="notes">Нотатки</string>
    <string name="what">Що</string>
    <string name="sometimes_reminder">Періодичне нагадування</string>
    <string name="date">Коли</string>
    <string name="time">О котрій</string>
    <string name="notify">Нагадати (за N хвилин)</string>
    <string name="start_date">Починаючи з</string>
    <string name="period">Період (кожні N діб)</string>
    <string name="create_reminder">Створити</string>
    <string name="yesterday">Вчора</string>
    <string name="days_ago_pattern">%d днів тому</string>
    <string name="detail_info">Детальна інформація</string>
    <string name="add_note">Введіть нотатку</string>
</resources>